Revision history for Hailo

{{$NEXT}}

    - Replace fortune(1) in hailo's --examples output with bot-training(1)

0.47 2010-05-29 13:08:51

    - Optimize Hailo::Tokenizer::Words to use less subroutine calls in
      critical code. Changed the time being spent in that file from
      5.14s to 3.72s out of a total runtime of 35.6s when running
      t/hailo/real_workload.t.

    - The initial tokenizer class is now saved as metadata to the
      database, and loaded into Hailo from existing brains.

      This means that this now works as expected:

          hailo --brain db.sqlite --tokenizer Chars --train file.trn 
          hailo --brain db.sqlite --reply foo

      I.e. Hailo will note that it used the Chars tokenizer in the
      database, and load the correct tokenizer in the future. However
      this will cause Hailo to die:

          hailo --brain db.sqlite --tokenizer Chars --train file.trn 
          hailo --brain db.sqlite --tokenizer Words --reply foo

      It spots that you've explicitly said you want a tokenizer that's
      incompatible with the one in the database for doing replies and
      dies. This is what it did before if you did the exact same thing
      with the --order switch.

    - Rename tests file in t/ to drop the DBD- prefix. Tests like
      Words-*.t are were also moved into
      sub-directories. e.g. Words/*.t.

0.46 2010-05-27 22:47:45

    - The Regexp::Common pattern added in 0.44 slowed down Hailo by up
      to 45% in pathological cases (tests doing lots of
      tokenization), overall test suite slowdown was closer to 10%.

      Now the pattern is only compiled once for the lifetime of the
      process with /o. This trick has also been applied to a few other
      patterns.

0.45 2010-05-27 19:56:31

    - The regular expression introduced in 0.44 to check if a word was
      of MiXeD CaSe was pathological. Changed it to a simpler one that
      works better.
