@@ -49,6 +49,7 @@ Term::Sk                  = 0.04
 
 ; ReadLine.pm
 Term::ReadLine            = 0
+Data::Dump                = 1.15
 
 ; DBD.pm
 List::MoreUtils           = 0.22
